chore(feature): add ckeditor for internships description

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
     <link href="./assets/css/themify-icons.css" rel="stylesheet">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
 </head>
 
 <body class="perfect-scrollbar-off off-canvas-sidebar">
